[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenv"
version = "0.1.0"
description = "Load environment variables from age-encrypted files"
readme = "README.md"
authors = [{ name = "Zach Cheung", email = "kuroro.zhang@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["python-dotenv"]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
