[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenv"
version = "0.2.3"
description = "Load environment variables from age-encrypted files"
readme = "README.md"
authors = [{ name = "Zach Cheung", email = "kuroro.zhang@gmail.com" }]
license = { text = "MIT" }
dependencies = ["python-dotenv"]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
